--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -5,20 +5,34 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
+  <link rel="stylesheet" href="reset.css">
+  <link rel="stylesheet" href="index.css">
   
   <title>Frontend Mentor | Coffeeroasters subscription site</title>
 </head>
 <body>
-  Home
-  About us
-  Create your plan
+  <header class="wrap_header">
+    <div class="header">
+      <img src="../starter-code/assets/shared/desktop/logo.svg" alt="title">
+    </div>
+    <nav class="wrap_nav">
+      <ul class="list_nav">
+        <li>Home</li>
+        <li>About us</li>
+        <li>Create your plan</li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <div class="wrap_board">
+      <h1 class="titl_board">Great coffee made simple.</h1>
 
-  Great coffee made simple.
-
-  Start your mornings with the world’s best coffees. Try our expertly curated artisan 
-  coffees from our best roasters delivered directly to your door, at your schedule.
-
-  Create your plan
+      <p class="txt_board">Start your mornings with the world’s best coffees. Try our expertly curated artisan 
+        coffees from our best roasters delivered directly to your door, at your schedule.</p>
+    
+      <button class="btn_board">Create your plan</button>
+    </div>
+  </main>
 
   Our collection
 
