--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -25,12 +25,12 @@
   </header>
   <main>
     <div class="wrap_board">
-      <h1 class="titl_board">Great coffee made simple.</h1>
-
-      <p class="txt_board">Start your mornings with the world’s best coffees. Try our expertly curated artisan 
-        coffees from our best roasters delivered directly to your door, at your schedule.</p>
-    
-      <button class="btn_board">Create your plan</button>
+      <div class="board">
+        <h1 class="title_board">Great coffee made simple.</h1>
+        <p class="txt_board">Start your mornings with the world’s best coffees. Try our expertly curated artisan 
+          coffees from our best roasters delivered directly to your door, at your schedule.</p>
+        <button class="btn_board">Create your plan</button>
+      </div>
     </div>
   </main>
 
